# darkpay-core

./: .gitignore  .travis.yml  CONTRIBUTING.md  COPYING  Makefile.am  README.md  configure.ac  libdarkpayconsensus.pc.in
.github/: ISSUE_TEMPLATE.md
.travis/: lint_06_script.sh  test_05_before_script.sh  test_06_script_a.sh  test_06_script_b.sh
build-aux/m4/: bitcoin_qt.m4
contrib/: gitian-build.py  gitian-build.sh
contrib/devtools/: copyright_header.py  gen-manpages.sh
contrib/gitian-descriptors/: gitian-darkpay-desktop.yml  gitian-linux.yml  gitian-osx-signer.yml  gitian-osx.yml  gitian-win-signer.yml  gitian-win.yml
contrib/init/: darkpayd.service
contrib/linearize/: example-linearize.cfg
doc/: Doxyfile.in  README.md  README_windows.txt  fuzzing.md  release-notes-darkpay.md  unit-tests.md
doc/man/: Makefile.am  darkpay-cli.1  darkpay-qt.1  darkpay-tx.1  darkpay-wallet.1  darkpayd.1
share/: setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  anon.cpp  anon.h  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoin-tx-res.rc  bitcoin-tx.cpp  bitcoin-wallet.cpp  bitcoind-res.rc  bitcoind.cpp  blind.cpp  blind.h  blockencodings.h  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsimport.h  chainparamsseeds.h  clientversion.cpp  clientversion.h  coins.cpp  coins.h  core_write.cpp  httpserver.cpp  init.cpp  keystore.cpp  miner.cpp  net.cpp  net_processing.cpp  outputtype.cpp  rctindex.h  rest.cpp  txdb.cpp  txmempool.cpp  validation.cpp  (+2 more)
test/: README.md
(+328 files in other folders)
