dist_man1_MANS=

if BUILD_BITCOIND
  dist_man1_MANS+=darkpayd.1
endif

if ENABLE_QT
  dist_man1_MANS+=darkpay-qt.1
endif

if BUILD_BITCOIN_CLI
  dist_man1_MANS+=darkpay-cli.1
endif

if BUILD_BITCOIN_TX
  dist_man1_MANS+=darkpay-tx.1
endif

if BUILD_BITCOIN_WALLET
  dist_man1_MANS+=darkpay-wallet.1
endif
